--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,3 +1,6 @@
+Version 1.0-7 (2011-09-27)
+o Extended examples in Batting.Rd
+
 Version 1.0-6 (2011-09-26)
 o Added battingStats() function to calculate BA and friends
 
