--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,5 +1,9 @@
+Version 1.0-8 (2011-10-02)
+o Added examples in HallOfFame.Rd
+
 Version 1.0-7 (2011-09-27)
 o Extended examples in Batting.Rd
+o Initial release to CRAN
 
 Version 1.0-6 (2011-09-26)
 o Added battingStats() function to calculate BA and friends
