Fixed defs in battingStats()
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/lahman@8 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,5 +1,6 @@
 Version 1.0-8 (2011-10-02)
 o Added examples in HallOfFame.Rd
+o Fixed definitions of BABIP and OBP in battingStats()
 
 Version 1.0-7 (2011-09-27)
 o Extended examples in Batting.Rd
