--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,6 +1,7 @@
 Version 1.0-8 (2011-10-02)
 o Added examples in HallOfFame.Rd
 o Fixed definitions of BABIP and OBP in battingStats()
+o Added examples in Manager.Rd
 
 Version 1.0-7 (2011-09-27)
 o Extended examples in Batting.Rd
@@ -15,6 +16,4 @@ o Fixed Appearances table
 o Added demo/batting-summstats.R
 o Added a few examples to various files
 o Initial export to R-Forge
-
-
 
