--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,3 +1,6 @@
+Version 1.0-10 (2012-10-04)
+o Fixed deprecated warnings stemming from changes in ggplot2
+
 Version 1.0-8 (2011-10-02)
 o Added examples in HallOfFame.Rd
 o Fixed definitions of BABIP and OBP in battingStats()
