--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,3 +1,7 @@
+Version 2.0-0 (2013-04-08)
+o New major version, now reflecting the 2012 Lahman database.  Some deprecated or defunct
+  tables were dropped.
+
 Version 1.0-10 (2012-10-04)
 o Fixed deprecated warnings stemming from changes in ggplot2
 
