--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,8 +1,11 @@
+Version 2.0-1 (2013-04-18)
+o Added Label() and data frames for variable labels
+
 Version 2.0-0 (2013-04-08)
 o New major version, now reflecting the 2012 Lahman database.  Some deprecated or defunct
   tables were dropped.
 o readLahman.R added to inst/scripts for documentation of how the data files were created
-o More examples added to various datassets
+o More examples added to various datasets
 
 Version 1.0-10 (2012-10-04)
 o Fixed deprecated warnings stemming from changes in ggplot2
