Added more examples from Dennis
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/lahman@25 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,6 +1,6 @@
 Version 2.0-1 (2013-04-18)
 o Added Label() and data frames for variable labels
-o Added more examples
+o Added more examples and plots to Salaries, Pitching, etc. from Dennis Murphy
 
 Version 2.0-0 (2013-04-08)
 o New major version, now reflecting the 2012 Lahman database.  Some deprecated or defunct
