revised readLahman.R script to use compression
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/lahman@40 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,3 +1,6 @@
+Version 2.0-4 (2013-06-04)
+o inst/scripts/readLahman.R now uses compression
+
 Version 2.0-3 (2013-05-29)
 o largest RData files are now compressed via R CMD build --resave-data
 
