--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -4,6 +4,7 @@ o Changes to reflect alterations in the 2013 schema:
   o HallOfFame$hofID is now HallOfFame$playerID
   o managerID is now playerID in all tables
   o Removed from Master: managerID, hofID, holtzID, lahmanID, lahman40ID, lahman45ID, nameNote, nameNick, and college
+o The data files used by Label() have now been copied to R/sysdata.rda to make CRAN happier (rev 47)
 
 Version 2.0-4 (2013-06-04)
 o inst/scripts/readLahman.R now uses compression
