now use Lahman::Master in playerInfo(), etc. to keep CRAN happier
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/lahman@50 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -1,4 +1,7 @@
-Version 3.0-0 (2013-07-20)
+Version 3.0-1 (2014-09-05)
+o now use Lahman::Master in playerInfo(), etc. to make CRAN happier
+
+Version 3.0-0 (2014-07-20)
 o Updated with data for the 2013 season
 o Changes to reflect alterations in the 2013 schema:
   o HallOfFame$hofID is now HallOfFame$playerID
